tests/fixtures/invalid/pow_dict_str_bool.py
# Cannot call pow() with Dict[str, int], Str, Bool
x = pow({"a": 1}, "hello", True)
